src/objects/Allergy__c.object
<CustomObject>
    <fields>
        <fullName>Allergies__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allergies</label>
        <referenceTo>Allergy_Master__c</referenceTo>
        <relationshipLabel>Allergies</relationshipLabel>
        <relationshipName>Allergies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allergy_Type__c</fullName>
        <label>Allergy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Drug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BaselineSymptomsForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Baseline Symptoms Form</label>
        <referenceTo>BaselineSymptomsForm__c</referenceTo>
        <relationshipLabel>Allergies</relationshipLabel>
        <relationshipName>Allergies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <label>Form Name</label>
        <picklist>
            <picklistValues>
                <fullName>Baseline Symptoms Form(Allergies)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baseline Symptoms Form(Baseline Condition)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Allergy__c</fullName>
        <label>Other Allergy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reactions__c</fullName>
        <label>Other Reactions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reactions__c</fullName>
        <label>Reactions</label>
        <picklist>
            <picklistValues>
                <fullName>Anaphylaxis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diarrhea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficulty in breathing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fainting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headache</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Itching eyes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Itching skin (without rash or hives)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nausea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pain or stuffiness in ears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Runny nose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sneezing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sore throat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swelling of lips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swelling of ankles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tightness in throat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vomiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheezing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1-Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Life threatening or Disabling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-Fatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controlled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>Allergies</relationshipLabel>
        <relationshipName>Allergies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_first_seen__c</fullName>
        <label>Year first seen</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pg_Allergy_id__c</fullName>
        <label>pg_Allergy_id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Allergy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Allergy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allergies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>